# CEROHUELLA_IA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  tareas.md
.awsdevops/pipelines/: buildspec.yml
.azuredevops/pipelines/: build.yml
.github/workflows/: apply-prod-academic.yml  ci.yml  copy-prod-secrets.yml  deploy.yml  terraform.yml
app/: main.py
app/api/v1/: redactions.py
app/core/: config.py  enums.py  exceptions.py  gcp_credentials.py  observability.py
app/db/: session.py
app/models/: __init__.py  redaction.py
app/repositories/: redaction_repository.py
app/schemas/: redaction.py
app/services/: file_service.py  pdf_redactor.py  redaction_service.py
docs/: arquitectura-azure.md  azure-recreate.md  github-azure-cicd.md  github-environments-oidc.md  observabilidad-azure.md  postgresql-migraciones.md  seguridad-cumplimiento.md  terraform-azure.md
infra/azure/: README.md  configure-containerapp.ps1  create-devops-release.ps1  create-devops-service-connection.ps1  create-github-oidc-app.ps1  create-resources.ps1
infra/github/: configure-environments.ps1
infra/terraform/: README.md
infra/terraform/bootstrap/: README.md  create-backend.ps1
migrations/: env.py
migrations/versions/: 20260423_0001_create_redaction_tables.py
openspec/changes/habilitar-prod-academico/: .openspec.yaml  README.md  design.md  proposal.md  (+1 more)
tests/: conftest.py
tests/integration/: test_redactions_api.py
tests/unit/: test_file_service.py  test_gcp_credentials.py  test_redaction_service.py  test_repository.py
(+54 files in other folders)
