[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerohuella-ia"
version = "0.1.0"
description = "API FastAPI para anonimizar PDFs y auditar solicitudes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "Pillow>=10.4.0,<11.0.0",
    "google-cloud-dlp>=3.23.0,<4.0.0",
    "azure-monitor-opentelemetry>=1.8.8,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "migrations*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
